[package]
name = "reboot"
version = "0.1.4"
edition = "2021"
authors = ["Joshua Karner joshua@karner.dev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "reboot"
path = "src\\main.rs"

[[bin]]
name = "reboot-firmware"
path = "src\\reboot_firmware.rs"

[[bin]]
name = "hibernate"
path = "src\\hibernate.rs"